[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-go-template"
version = "1.0.0"
license = {file = "LICENSE"}
authors = [
    { name="myback", email="54638513+myback@users.noreply.github.com" },
]
description = "Python bindings for go-template with helmfile/sprig functions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/myback/go-template"
"Bug Tracker" = "https://github.com/myback/go-template/issues"

[tool.setuptools.packages.find]
where=["src"]

[tool.setuptools.package-data]
"go_template.bind" = ["template.*"]

